--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">"I currently have a manuscript under review; in the meantime, please feel free to view my CV and ongoing work on my website."</a>.</div>
 {% endif %}
 
 {% include base_path %}
